# examen-3rd-

./: README.md
examen (copy)/: 1wisss.glade.bak.bak.bak  1wisss.glade.bak.bak.bakp.bak  Makefile  Makefile.am  Makefile.in  agent.txt  agentaffecter.txt  config.h  config.status  configure  configure.in  parking.txt
examen (copy)/autom4te.cache/: output.1  requests  traces.0  traces.1
examen (copy)/po/: Makefile  Makefile.in
examen (copy)/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  examen  interface.c  interface.c.bak  main.c  parking.c  parking.h
